[Safari Bugs] Fixes Flicker & Disappearing Text (#14)
* fixed to relative. add backface for flicker. take that stay puft.

* * was too much. caused borders on tds to not render.

* sass for safari styles

--- a/css/theme/codingandcocktails.css
+++ b/css/theme/codingandcocktails.css
@@ -267,6 +267,16 @@ SNIPPETS
 }
 
 /*********************************************
+ * BROWSER SPECIFIC STYLES
+ *********************************************/
+
+/* prevents flicker in browser for animations */
+.safari h1,
+.safari li {
+  -webkit-backface-visibility: hidden;
+}
+
+/*********************************************
 * OVERRIDES
 **********************************************/
 .left-align{text-align:left}
